tests/snapshots/examples_advanced/list_map_filter.snap
---
source: tests/examples_advanced_snapshots.rs
---
Fixture: examples/advanced/list_map_filter.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/advanced/list_map_filter.flx:26:1
   |
26 | print("=== Base map/filter/fold on lists ===");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/advanced/list_map_filter.flx:26:1
   |
26 | print("=== Base map/filter/fold on lists ===");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/advanced/list_map_filter.flx:32:1
   |
32 | print(doubled);
   | ^^^^^^^^^^^^^^^
   | --------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/advanced/list_map_filter.flx:36:1
   |
36 | print(big);
   | ^^^^^^^^^^^
   | ----------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/advanced/list_map_filter.flx:40:1
   |
40 | print(total);
   | ^^^^^^^^^^^^^
   | ------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/advanced/list_map_filter.flx:46:1
   |
46 | print("=== Chained pipeline ===");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/advanced/list_map_filter.flx:56:1
   |
56 | print(result);
   | ^^^^^^^^^^^^^^
   | -------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/advanced/list_map_filter.flx:62:1
   |
62 | print("=== Recursive alternatives ===");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/advanced/list_map_filter.flx:79:1
   |
79 | print(list_map(nums, /x -> x * 2));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/advanced/list_map_filter.flx:80:1
   |
80 | print(list_filter(doubled, /x -> x > 5));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/advanced/list_map_filter.flx:86:1
   |
86 | print("=== Building maps from lists ===");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/advanced/list_map_filter.flx:91:1
   |
91 | print(lengths);
   | ^^^^^^^^^^^^^^^
   | --------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/advanced/list_map_filter.flx:97:1
   |
97 | print("=== Flatten ===");
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/advanced/list_map_filter.flx:118:1
    |
118 | print(flatten(nested));
    | ^^^^^^^^^^^^^^^^^^^^^^^
    | ----------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/advanced/list_map_filter.flx:124:1
    |
124 | print("=== Zip ===");
    | ^^^^^^^^^^^^^^^^^^^^^
    | --------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E300]: TYPE UNIFICATION ERROR

The 2nd argument to `zip` has the wrong type.

  --> examples/advanced/list_map_filter.flx:138:25
    |
126 | fn zip(a, b) {

127 |     match a {

128 |         [ha | ta] -> match b {

129 |             [hb | tb] -> [[ha, hb] | zip(ta, tb)],

130 |             _ -> None,

131 |         },

132 |         _ -> None,

133 |     }

134 | }

135 | 

136 | let labels = ["a", "b", "c"];

137 | let vals = [1, 2, 3];

138 | let pairs = zip(labels, vals);
    |                         ^^^^
    |                         ---- this argument is `List<Int>`

Help:
  Expected `List<String>` as the 2nd argument.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/advanced/list_map_filter.flx:139:1
    |
139 | print(to_array(pairs));
    | ^^^^^^^^^^^^^^^^^^^^^^^
    | ----------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/advanced/list_map_filter.flx:145:1
    |
145 | print("=== Take / Drop ===");
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    | ----------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/advanced/list_map_filter.flx:170:1
    |
170 | print(take(items, 3));
    | ^^^^^^^^^^^^^^^^^^^^^^
    | ---------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/advanced/list_map_filter.flx:171:1
    |
171 | print(drop(items, 3));
    | ^^^^^^^^^^^^^^^^^^^^^^
    | ---------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 20 errors.
== stdout ==
<not executed>
